# vehicular-networks-and-cooperative-driving

./: .gitmodules  .project  .qtenvrc  CMakeLists.txt  README.md  SimpleHighNumberCACC_0.anf  SimpleHighNumberPLOEG_0.anf  makerun.sh  omnetpp.ini  runs.txt
analisys/: Untitled.ipynb  maneuver_speed_cacc.csv  maneuver_speed_ploeg.csv  platoon_sizes_cacc.csv  platoon_sizes_ploeg.csv
cmake/plexe/: FindPlexe.cmake
cmake/veins/: FindVeins.cmake
include/: ApplicationAdapter.h  MergeManeuver.h  MyPlatooningApp.h  Protocol.h  Scenario.h  TrafficManager.h
include/maneuvers/: IdleManeuver.h  MergeManeuver.h
msg/: InternalListenTimeout.msg  PlatoonCreateAnswer.msg  PlatoonCreateRequest.msg  PlatoonSearchCAM.msg  PlatoonUnicast.msg  test.msg
msg/messages/: PlatoonAdvertisementListenTimeout.msg
msg/packets/: packetHeader.msg  platoonAdvertisementBeacon.msg  platoonCreateRequest.msg  platoonCreateRequestACK.msg
networks/: Highway.ned  package.ned
networks/apps/: MyPlatooningApp.ned
networks/protocols/: PlatooningProtocol.ned
networks/scenarios/: Scenario.ned
networks/traffic/: TrafficManager.ned
src/: ApplicationAdapter.cpp  MergeManeuver.cpp  MyPlatooningApp.cpp  PlatooningProtocol.cpp  Scenario.cpp  TrafficManager.cpp
src/maneuvers/: IdleManeuver.cpp  MergeManeuver.cpp
sumocfg/: freeway.net.xml  freeway.rou.xml
